--- a/src/main/resources/edu/wpi/teamname/views/InternalPatientTransportationServiceRequest.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/InternalPatientTransportationServiceRequest.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="480.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.InternalPatientTransportationServiceRequestController">
     <children>
         <Text layoutX="134.0" layoutY="24.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Internal Patient Transfer Service Request" textAlignment="CENTER" />
@@ -48,11 +49,11 @@
                   <Insets left="20.0" top="50.0" />
                </padding>
             </GridPane>
-              <Button fx:id="sendButton" alignment="BOTTOM_RIGHT" defaultButton="true" mnemonicParsing="false" onAction="#sendServiceRequest" text="Send" textFill="#176aeb" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+              <JFXButton fx:id="sendButton" alignment="BOTTOM_RIGHT" defaultButton="true" mnemonicParsing="false" onAction="#sendServiceRequest" text="Send" textFill="#176aeb" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
                <GridPane.margin>
                   <Insets bottom="20.0" right="20.0" />
                </GridPane.margin>
-            </Button>
+            </JFXButton>
             <GridPane fx:id="transferTimeGridPlane" GridPane.rowIndex="2">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="105.0" minWidth="10.0" prefWidth="80.0" />
