--- a/src/main/resources/edu/wpi/teamname/views/GiftAndFloralServiceRequest.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/GiftAndFloralServiceRequest.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="209.0" prefWidth="327.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.GiftFloralDeliveryServiceRequestController">
     <children>
         <Text layoutX="95.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gift/Floral Delivery Request" />
@@ -22,7 +23,7 @@
         <TextField fx:id="floorTextBox" layoutX="53.0" layoutY="101.0" />
         <Text layoutX="15.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deliver at a later time/date?" />
         <CheckBox fx:id="scheduleCheckbox" layoutX="167.0" layoutY="165.0" mnemonicParsing="false" onAction="#ScheduleCallBack" />
-        <Button fx:id="sendButton" defaultButton="true" layoutX="260.0" layoutY="169.0" mnemonicParsing="false" onAction="#sendServiceRequest" text="Send" textFill="#176aeb" />
+        <JFXButton fx:id="sendButton" defaultButton="true" layoutX="260.0" layoutY="169.0" mnemonicParsing="false" onAction="#sendServiceRequest" text="Send" textFill="#176aeb" />
         <CheckBox fx:id="fragileCheckbox" layoutX="84.0" layoutY="135.0" mnemonicParsing="false" />
         <AnchorPane fx:id="scheduleAnchorPane" layoutX="18.0" layoutY="189.0" prefHeight="75.0" prefWidth="315.0" visible="false">
             <children>
