--- a/src/main/resources/edu/wpi/teamname/views/ServiceRequestLandingPage.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/ServiceRequestLandingPage.fxml
@@ -16,7 +16,7 @@
       <JFXButton layoutX="14.0" layoutY="207.0" mnemonicParsing="false" text="Sanitation Services" />
       <JFXButton layoutX="14.0" layoutY="243.0" mnemonicParsing="false" onAction="#laundryServicesButtonClick" text="Laundry Services" />
       <JFXButton fx:id="religiousRequest" layoutX="14.0" layoutY="280.0" mnemonicParsing="false" onAction="#religiousServicesButtonClick" text="Religious Request" />
-      <JFXButton layoutX="14.0" layoutY="315.0" mnemonicParsing="false" text="Internal Patient Transportation " />
+      <JFXButton layoutX="14.0" layoutY="315.0" mnemonicParsing="false" onAction="#internalPatientTransportationButtonClick" text="Internal Patient Transportation " />
       <JFXButton layoutX="14.0" layoutY="350.0" mnemonicParsing="false" text="External Patient Transportation " />
       <JFXButton layoutX="207.0" layoutY="315.0" mnemonicParsing="false" onAction="#audioVideoServiceButtonClick" text="Audio/Visual Services" />
       <JFXButton fx:id="computerServiceRequestButton" layoutX="207.0" layoutY="280.0" mnemonicParsing="false" onAction="#computerServiceRequestButtonClick" text="Computer Service Request" />
