Updated UI Stylesheets

--- a/src/main/resources/edu/wpi/teamname/viewStyleSheets/titlePage.css
+++ b/src/main/resources/edu/wpi/teamname/viewStyleSheets/titlePage.css
@@ -1,6 +1,6 @@
-.root {
-    -fx-background-image: url('../images/hospitalBackgroundImage.png');
-    -fx-background-position: top left;
-    -fx-background-repeat: no-repeat;
-    -fx-background-size: cover;
+.title-background {
+  -fx-background-image: url("../images/hospitalBackgroundImage.png") !important;
+  -fx-background-position: top left;
+  -fx-background-repeat: no-repeat;
+  -fx-background-size: cover;
 }
