--- a/src/main/resources/edu/wpi/teamname/views/LaundryServiceRequest.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/LaundryServiceRequest.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.LaundryServiceRequestController">
    <children>
-      <Text layoutX="24.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name: " />
+      <Text layoutX="24.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Patient Name: " />
       <Text layoutX="24.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room:" />
       <Text layoutX="24.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floor:" />
       <TextField fx:id="patientName" layoutX="102.0" layoutY="53.0" />
@@ -20,7 +20,7 @@
       <Text layoutX="300.0" layoutY="206.0" strokeType="OUTSIDE" strokeWidth="0.0" text="End Date: " />
       <DatePicker layoutX="27.0" layoutY="217.0" />
       <DatePicker layoutX="240.0" layoutY="216.0" />
-      <Text layoutX="236.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Laundry Service Request" />
+      <Text layoutX="160.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="subtitle" text="Laundry Service Request" />
       <Button fx:id="sendButton" defaultButton="true" layoutX="202.0" layoutY="267.0" mnemonicParsing="false" onAction="#sendServiceRequest" text="Send" textFill="#176aeb" />
    </children>
 </AnchorPane>
