--- a/src/main/resources/edu/wpi/teamname/views/TitlePage.fxml
+++ b/src/main/resources/edu/wpi/teamname/views/TitlePage.fxml
@@ -2,9 +2,16 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
 <AnchorPane styleClass="title-background" stylesheets="@../viewStyleSheets/mainStyle.css"
-   xmlns="http://javafx.com/javafx/17"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.TitlePageController">
+            xmlns="http://javafx.com/javafx/17"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teamname.views.TitlePageController">
    <children>
       <GridPane layoutY="7.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <columnConstraints>
