--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/LandingPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/LandingPage.fxml
@@ -4,9 +4,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="800.0" prefWidth="1200.0" styleClass="pane" stylesheets="@../viewStyleSheets/mainStyle.css"
-   xmlns="http://javafx.com/javafx/17"
-   xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.LandingPageController">
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragEntered="#setup" onMouseEntered="#setup" prefHeight="800.0" prefWidth="1200.0" styleClass="pane" stylesheets="@../viewStyleSheets/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.LandingPageController">
    <children>
       <TabPane id="tabContainer" fx:id="tabContainer" layoutX="554.0" layoutY="145.0" onDragEntered="#setup" side="LEFT" styleClass="pane" tabClosingPolicy="UNAVAILABLE" tabMaxHeight="300.0" tabMaxWidth="35.0" tabMinHeight="250.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <tabs>
