--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/GiftAndFloralServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/views/serviceRequests/GiftAndFloralServiceRequestPage.fxml
@@ -1,30 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="209.0" prefWidth="327.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.serviceRequests.GiftAndFloralDeliveryServiceRequestPageServiceRequestController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="580.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.views.serviceRequests.GiftAndFloralDeliveryServiceRequestPageServiceRequestController">
     <children>
-        <Text layoutX="95.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gift/Floral Delivery Request" />
-        <Text layoutX="14.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name: " />
-        <Text layoutX="14.0" layoutY="87.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room:" />
-        <Text layoutX="14.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Floor:" />
-        <Text layoutX="11.0" layoutY="148.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fragile (Y/N):" />
+      <GridPane layoutY="2.0" prefHeight="580.0" prefWidth="580.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Gift/Floral Delivery Request" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+              <JFXButton fx:id="sendButton" buttonType="RAISED" defaultButton="true" mnemonicParsing="false" text="Send" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </JFXButton>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Deliver at a later time/date?" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Text>
+              <CheckBox fx:id="scheduleCheckbox" mnemonicParsing="false" onAction="#ScheduleCallBack" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </CheckBox>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Fragile (Y/N):" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Text>
+              <CheckBox fx:id="fragileCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </CheckBox>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Floor:" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Text>
+              <TextField fx:id="floorTextBox" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </TextField>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Room:" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Text>
+              <TextField fx:id="roomTextBox" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </TextField>
+              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name: " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin>
+            </Text>
+              <TextField fx:id="patientNameTextBox" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0" />
+               </GridPane.margin>
+            </TextField>
+         </children>
+      </GridPane>
         <TextArea fx:id="dietaryRestrictionsDescribe" layoutX="241.0" layoutY="143.0" prefHeight="56.0" prefWidth="192.0" visible="false" />
         <Text fx:id="dietaryRestrictionsDescribeText" layoutX="281.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Describe Restrictions:" visible="false" />
-        <TextField fx:id="patientNameTextBox" layoutX="92.0" layoutY="43.0" />
-        <TextField fx:id="roomTextBox" layoutX="53.0" layoutY="70.0" />
-        <TextField fx:id="floorTextBox" layoutX="53.0" layoutY="101.0" />
-        <Text layoutX="15.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deliver at a later time/date?" />
-        <CheckBox fx:id="scheduleCheckbox" layoutX="167.0" layoutY="165.0" mnemonicParsing="false" onAction="#ScheduleCallBack" />
-        <JFXButton fx:id="sendButton" defaultButton="true" layoutX="260.0" layoutY="169.0" mnemonicParsing="false" text="Send" textFill="#176aeb" />
-        <CheckBox fx:id="fragileCheckbox" layoutX="84.0" layoutY="135.0" mnemonicParsing="false" />
         <AnchorPane fx:id="scheduleAnchorPane" layoutX="18.0" layoutY="189.0" prefHeight="75.0" prefWidth="315.0" visible="false">
             <children>
                 <Text disable="true" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Delivery Time:" />
