Added Initial Icons and Static Graphics for Service Requests

--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/css/circleprogress.css
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/css/circleprogress.css
@@ -1,7 +1,7 @@
 .circleindicator-container  {	
 	circleindicator-color: #149300;
 	-fx-padding: 5.0;
-	-fx-background-color: -fx-background;
+	-fx-background-color: rgba(0,0,0,0);
 }
 .circleindicator-container > .circleindicator-label {
 	-fx-font-weight: bold; 
